service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-django
spec:
  type: NodePort
  selector:
    app: hello-django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 31112
